# hybrid-search-agentic-rag

./: .gitignore  DESIGN_DOCUMENT.md  Dockerfile  GOLDEN_SQL_SEEDS.md  LANGGRAPH_USAGE.md  README.md  REQUIREMENTS_FEW_SHOT_LEARNING.md  docker-compose.yml  load_golden_sql_seeds.py  main.py  pyproject.toml  requirements.txt
dao/sql/: sql_dao.py
dao/vector/: chroma_db.py
docx_processing/: docx_processor.py
frontend/: __init__.py  streamlit_app.py
frontend/components/: chat_component.py  chat_history_component.py  navbar.py  raw_output_component.py
frontend/pages/: query_page.py  upload_page.py
frontend/services/: pipeline_service.py  query_feedback_service.py  session_service.py  upload_service.py
frontend/utils/: answer_formatter.py
init/: init.sql  schema.sql
models/: __init__.py  ollama_model.py  openai_model.py
pdf_processing/: multi_modal_parent.py  multi_modal_processor.py  pdf_processor_text.py  pdf_retriever_multi_modal.py
pipeline/: rag_pipeline.py
pipeline/nodes/: __init__.py  executor.py  reflect.py  router.py
pipeline/nodes/sql/: __init__.py  generation.py  invocation.py  safeguards.py  validation.py
pipeline/nodes/vector/: __init__.py  routing.py  (+1 more)
pipeline/prompts/: __init__.py  final_answer_prompt.py  follow_up_prompt.py  reflection_prompt.py  router_prompt.py  sql_generation_prompt.py  sql_repair_prompt.py  vector_answer_prompt.py  vector_synthesis_prompt.py
sample_docs/: feedback_pairs.csv
state/: __init__.py  base_state.py  rag_reflection_state.py
utilities/: cache.py  llm_output.py  reranker.py  safety.py  timer.py
